--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
 
             <!-- เมนูโทรศัพท์ ซ่อน/แสดง -->
             <div id="mobile-menu" 
-                class="hidden fixed inset-0 z-40 bg-black/50 backdrop-blur-sm md:hidden px-4 py-4"
+                class="hidden fixed inset-0 z-[60] bg-black/50 backdrop-blur-sm md:hidden px-4 py-4"
             >
-                <ul class="flex flex-col gap-4 text-sm"> 
-                    <li><a href="#home" class="block nav-link active:scale-95 transition">Home</a></li>
-                    <li><a href="#about" class="block nav-link active:scale-95 transition">About</a></li>
-                    <li><a href="#portfolio" class="block nav-link active:scale-95 transition">Portfolio</a></li>
-                    <li><a href="#contact" class="block nav-link active:scale-95 transition">Contact</a></li>
+                <ul class="w-full max-w-sm bg-earth-card rounded-2xl p-6 space-y-4 text-base"> 
+                    <li><a href="#home" class="block nav-link py-2">Home</a></li>
+                    <li><a href="#about" class="block nav-link py-2">About</a></li>
+                    <li><a href="#portfolio" class="block nav-link py-2">Portfolio</a></li>
+                    <li><a href="#contact" class="block nav-link py-2">Contact</a></li>
                 </ul>
             </div>
 
