--- a/index.html
+++ b/index.html
@@ -71,19 +71,19 @@
             </ul>
 
             <!-- ปุ่มเมนู บนโทรศัพท์ -->
-            <button id="menu-btn" class="md:hidden text-xl" aria-label="Toggle menu">
+            <button id="menu-btn" class="md:hidden relative z-[100]">
                 ☰
             </button>
 
             <!-- เมนูโทรศัพท์ ซ่อน/แสดง -->
             <div id="mobile-menu" 
-                class="hidden fixed inset-0 z-[60] bg-black/50 backdrop-blur-sm md:hidden px-4 py-4"
+                class="hidden fixed inset-0 z-[60] bg-black/50 backdrop-blur-sm md:hidden flex items-center justify-center"
             >
-                <ul class="w-full max-w-sm bg-earth-card rounded-2xl p-6 space-y-4 text-base"> 
-                    <li><a href="#home" class="block nav-link py-2">Home</a></li>
-                    <li><a href="#about" class="block nav-link py-2">About</a></li>
-                    <li><a href="#portfolio" class="block nav-link py-2">Portfolio</a></li>
-                    <li><a href="#contact" class="block nav-link py-2">Contact</a></li>
+                <ul class="bg-earth-card rounded-xl p-6 space-y-4 text-center"> 
+                    <li><a href="#home" class="block nav-link">Home</a></li>
+                    <li><a href="#about" class="block nav-link">About</a></li>
+                    <li><a href="#portfolio" class="block nav-link">Portfolio</a></li>
+                    <li><a href="#contact" class="block nav-link">Contact</a></li>
                 </ul>
             </div>
 
@@ -309,11 +309,20 @@
             <div>
                 <p>Email: <a href="mailto:zzaysbr@gmail.com" class="text-earth-accent hover:underline">zzaysbr@gmail.com</a></p>
                 <p>Github: <a href="https://github.com/Zzaysbr" class="text-earth-accent hover:underline">Zzaysbr</a></p>
+                <p>Discord: n1coltxne</p>
             </div>
 
             <!-- Contact Form -->
             <form id="contact-form" class="space-y-6">
-                <div>
+
+                <input id="name" type="text" placeholder="Name" class="w-full px-4 py-3 rounded-xl bg-earth border border-earth-border focus:border-earth-accent focus:outline-none focus:ring-1 focus:ring-earth-accent" />
+                <input id="email" type="email" placeholder="Email" class="w-full px-4 py-3 rounded-xl bg-earth border border-earth-border focus:border-earth-accent focus:outline-none focus:ring-1 focus:ring-earth-accent" />
+                <textarea id="message" rows="4" placeholder="Message" class="w-full px-4 py-3 rounded-xl bg-earth border border-earth-border focus:border-earth-accent focus:outline-none focus:ring-1 focus:ring-earth-accent"></textarea>
+
+                <button type="submit" class="px-6 py-3 rounded-2xl bg-earth-accent hover:bg-earth-hover transition text-sm font-md">Submit</button>
+
+                
+                <!-- <div>
                     <label class="block text-sm mb-1">Name</label>
                     <input 
                         type="text"
@@ -345,10 +354,13 @@
                     class="px-6 py-3 rounded-2xl bg-earth-accent hover:bg-earth-hover transition text-sm font-md"
                 >
                     Submit
-                </button>
+                </button> -->
 
-                <div id="form-feedback"></div>
             </form>
+            <div 
+                id="form-feedback"
+                class="mt-4 min-h-[24px] text-sm"
+            ></div>
         </div>
     </section>
 
